--- a/SCI.BusinessLogic/SCI.BusinessLogic.vbproj
+++ b/SCI.BusinessLogic/SCI.BusinessLogic.vbproj
@@ -90,6 +90,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Services\Implementations\InventoryDataService.vb" />
     <Compile Include="Services\Implementations\CategoryDataService.vb" />
     <Compile Include="Services\Implementations\CustomerDataService.vb" />
     <Compile Include="Services\Implementations\EmployeeDataService.vb" />
@@ -97,6 +98,7 @@
     <Compile Include="Services\Implementations\ProviderDataService.vb" />
     <Compile Include="Services\Implementations\UserDataService.vb" />
     <Compile Include="Services\Interfaces\ICategoryDataService.vb" />
+    <Compile Include="Services\Interfaces\IInventoryDataService.vb" />
     <Compile Include="Services\Interfaces\ICustomerDataService.vb" />
     <Compile Include="Services\Interfaces\IEmployeeDataService.vb" />
     <Compile Include="Services\Interfaces\IBranchOfficeDataService.vb" />
