--- a/SCI.Modules.Inventory/SCI.Modules.Inventory.vbproj
+++ b/SCI.Modules.Inventory/SCI.Modules.Inventory.vbproj
@@ -6,7 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AC0123BF-ACC7-4472-BBD4-DB71386F64ED}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SCI.Modules.Inventory</RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <AssemblyName>SCI.Modules.Inventory</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
@@ -71,18 +72,24 @@
       <HintPath>..\packages\MaterialDesignThemes.2.2.1.750\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Expression.Interactions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.3.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -111,6 +118,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ViewModels\InventoryViewModel.vb" />
+    <Compile Include="Views\CrudDetailInventoryView.xaml.vb">
+      <DependentUpon>CrudDetailInventoryView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\InventoryView.xaml.vb">
+      <DependentUpon>InventoryView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CrudInventoryView.xaml.vb">
+      <DependentUpon>CrudInventoryView.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -132,6 +149,35 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\SCI.BusinessLogic\SCI.BusinessLogic.vbproj">
+      <Project>{d1d93999-2ab2-48fe-a241-2124ac157052}</Project>
+      <Name>SCI.BusinessLogic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SCI.BusinessObjects\SCI.BusinessObjects.vbproj">
+      <Project>{fe9c67f1-17b5-4d63-bf8a-0e5f4be59b8e}</Project>
+      <Name>SCI.BusinessObjects</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SCI.Infrastructure\SCI.Infrastructure.vbproj">
+      <Project>{6a1b3e85-59c3-4630-bceb-10f2400db955}</Project>
+      <Name>SCI.Infrastructure</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Views\CrudDetailInventoryView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\InventoryView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\CrudInventoryView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
